final version for bhabin

--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -29,8 +29,90 @@
             -->
             <div class="burial-methods">
 
-                <!--WRITE YOUR CODE HERE-->
-                
+                <div class="heading text-center mb-3">
+                    Burial Methods
+                </div>
+
+                <div class="layout-burial-methods grid grid-cols-2 gap-5 place-items-center">
+
+                    <div class="card border-[2px] border-black flex flex-col rounded-lg">
+
+                        <div class="card-heading flex justify-center p-1">
+                            HEADING 
+                        </div>
+
+                        <div class="card-image">
+                            <img src="../static/images/pic.jpeg" alt="">
+                        </div>
+
+                        <div class="card-select flex justify-evenly">
+                            <input type="radio" name="grave locations" value="image1">
+                            <button type="button" class="icon hover:bg-[#e9ab78] rounded">
+                                <i class="fa-solid fa-microphone text-3xl microphone"></i>
+                            </button>
+                        </div>
+
+                    </div>
+
+                    <div class="card border-[2px] border-black flex flex-col rounded-lg">
+
+                        <div class="card-heading flex justify-center p-1">
+                            HEADING 
+                        </div>
+
+                        <div class="card-image">
+                            <img src="../static/images/pic.jpeg" alt="">
+                        </div>
+
+                        <div class="card-select flex justify-evenly">
+                            <input type="radio" name="grave locations" value="image1">
+                            <button type="button" class="icon hover:bg-[#e9ab78] rounded">
+                                <i class="fa-solid fa-microphone text-3xl microphone"></i>
+                            </button>
+                        </div>
+
+                    </div>
+
+                    <div class="card border-[2px] border-black flex flex-col rounded-lg">
+
+                        <div class="card-heading flex justify-center p-1">
+                            HEADING 
+                        </div>
+
+                        <div class="card-image">
+                            <img src="../static/images/pic.jpeg" alt="">
+                        </div>
+
+                        <div class="card-select flex justify-evenly">
+                            <input type="radio" name="grave locations" value="image1">
+                            <button type="button" class="icon hover:bg-[#e9ab78] rounded">
+                                <i class="fa-solid fa-microphone text-3xl microphone"></i>
+                            </button>
+                        </div>
+
+                    </div>
+
+                    <div class="card border-[2px] border-black flex flex-col rounded-lg">
+
+                        <div class="card-heading flex justify-center p-1">
+                            HEADING 
+                        </div>
+
+                        <div class="card-image">
+                            <img src="../static/images/pic.jpeg" alt="">
+                        </div>
+
+                        <div class="card-select flex justify-evenly">
+                            <input type="radio" name="grave locations" value="image1">
+                            <button type="button" class="icon hover:bg-[#e9ab78] rounded">
+                                <i class="fa-solid fa-microphone text-3xl microphone"></i>
+                            </button>
+                        </div>
+
+                    </div>
+
+                </div>
+
             </div>
 
         </form>
