--- a/Natural Burial/static/css/index.css
+++ b/Natural Burial/static/css/index.css
@@ -5,4 +5,50 @@ html{
 
 /* CSS by Bhabin Chudal */
 
-/* WRITE CSS HERE [AND DELETE THIS COMMENT] */
+.burial-methods .heading{
+    font-size: 4rem;
+}
+
+.burial-methods .card{
+    width: 37rem;
+    height: 47rem;
+}
+
+/* Setting the height of each div inside card to achieve proper layout */
+.burial-methods .card{
+    .card-heading{
+        height: fit-content; /* Occupies the exact amount of height required to fit heading */
+        font-size: 4rem;
+    }
+
+    .card-image{
+        height: 60%; /* Occupies 60% of the height of the card */
+        flex-grow: 1; /* Occupy the remaining space if heading is short */
+    }
+
+    .card-select{
+        height: 20%; /* Occupies 20% of the height of the card */
+    }
+}
+
+.burial-methods .card .card-image img{
+    /* Making the image fit the card-image div */
+    width: 100%;
+    height: 100%;
+}
+
+/* Increasing the size of the icon and radio buttons in card-select div */
+.burial-methods .card-select{
+    input[type="radio"]{
+        width: 19%;
+    }
+
+    button{
+        display: flex;
+        align-items: center;
+    }
+
+    i{
+        font-size: 100px;
+    }
+}
