--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -46,7 +46,7 @@
                         </div>
 
                         <div class="card-select flex justify-evenly">
-                            <input type="radio" name="grave locations" value="image1">
+                            <input type="radio" name="burial methods" value="image1">
                             <button type="button" class="icon hover:bg-[#e9ab78] rounded">
                                 <i class="fa-solid fa-microphone text-3xl microphone"></i>
                             </button>
@@ -65,7 +65,7 @@
                         </div>
 
                         <div class="card-select flex justify-evenly">
-                            <input type="radio" name="grave locations" value="image1">
+                            <input type="radio" name="burial methods" value="image1">
                             <button type="button" class="icon hover:bg-[#e9ab78] rounded">
                                 <i class="fa-solid fa-microphone text-3xl microphone"></i>
                             </button>
@@ -84,7 +84,7 @@
                         </div>
 
                         <div class="card-select flex justify-evenly">
-                            <input type="radio" name="grave locations" value="image1">
+                            <input type="radio" name="burial methods" value="image1">
                             <button type="button" class="icon hover:bg-[#e9ab78] rounded">
                                 <i class="fa-solid fa-microphone text-3xl microphone"></i>
                             </button>
@@ -103,7 +103,7 @@
                         </div>
 
                         <div class="card-select flex justify-evenly">
-                            <input type="radio" name="grave locations" value="image1">
+                            <input type="radio" name="burial methods" value="image1">
                             <button type="button" class="icon hover:bg-[#e9ab78] rounded">
                                 <i class="fa-solid fa-microphone text-3xl microphone"></i>
                             </button>
