--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -45,8 +45,33 @@
                             <img src="../static/images/pic.jpeg" alt="">
                         </div>
 
-                        <div class="card-select flex justify-evenly">
-                            <input type="radio" name="burial methods" value="image1">
+                        <div class="card-select flex">
+                            <div class="input-radio flex justify-center">
+                                <input type="radio" name="burial methods" value="image1">
+                            </div>
+
+                            <button type="button" class="flex justify-center items-center icon hover:bg-[#e9ab78] rounded">
+                                <i class="fa-solid fa-microphone text-3xl microphone"></i>
+                            </button>
+                        </div>
+
+                    </div>
+
+                    <div class="card border-[2px] border-black flex flex-col rounded-lg">
+
+                        <div class="card-heading flex justify-center p-1">
+                            HEADING 
+                        </div>
+
+                        <div class="card-image">
+                            <img src="../static/images/pic.jpeg" alt="">
+                        </div>
+
+                        <div class="card-select flex">
+                            <div class="input-radio flex justify-center">
+                                <input type="radio" name="burial methods" value="image1">
+                            </div>
+
                             <button type="button" class="icon hover:bg-[#e9ab78] rounded">
                                 <i class="fa-solid fa-microphone text-3xl microphone"></i>
                             </button>
@@ -64,8 +89,11 @@
                             <img src="../static/images/pic.jpeg" alt="">
                         </div>
 
-                        <div class="card-select flex justify-evenly">
-                            <input type="radio" name="burial methods" value="image1">
+                        <div class="card-select flex">
+                            <div class="input-radio flex justify-center">
+                                <input type="radio" name="burial methods" value="image1">
+                            </div>
+
                             <button type="button" class="icon hover:bg-[#e9ab78] rounded">
                                 <i class="fa-solid fa-microphone text-3xl microphone"></i>
                             </button>
@@ -83,27 +111,11 @@
                             <img src="../static/images/pic.jpeg" alt="">
                         </div>
 
-                        <div class="card-select flex justify-evenly">
-                            <input type="radio" name="burial methods" value="image1">
-                            <button type="button" class="icon hover:bg-[#e9ab78] rounded">
-                                <i class="fa-solid fa-microphone text-3xl microphone"></i>
-                            </button>
-                        </div>
+                        <div class="card-select flex">
+                            <div class="input-radio flex justify-center">
+                                <input type="radio" name="burial methods" value="image1">
+                            </div>
 
-                    </div>
-
-                    <div class="card border-[2px] border-black flex flex-col rounded-lg">
-
-                        <div class="card-heading flex justify-center p-1">
-                            HEADING 
-                        </div>
-
-                        <div class="card-image">
-                            <img src="../static/images/pic.jpeg" alt="">
-                        </div>
-
-                        <div class="card-select flex justify-evenly">
-                            <input type="radio" name="burial methods" value="image1">
                             <button type="button" class="icon hover:bg-[#e9ab78] rounded">
                                 <i class="fa-solid fa-microphone text-3xl microphone"></i>
                             </button>
