--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -28,26 +28,31 @@
                 regarding burial-methods.
             -->
             <div class="burial-methods">
-
+                
                 <div class="heading text-center mb-3">
                     Burial Methods
                 </div>
 
-                <div class="layout-burial-methods grid grid-cols-2 gap-5 place-items-center">
+                <div class="layout-burial-methods grid grid-cols-1 sm:grid-cols-1 md:grid-cols-1 gap- lg:grid-cols-2 gap-5 place-items-center">
 
                     <div class="card border-[2px] border-black flex flex-col rounded-lg">
 
-                        <div class="card-heading flex justify-center p-1">
-                            HEADING 
+                        <div class="card-heading flex justify-center text-center p-1">
+                            Camp Hill Cemetery 
                         </div>
 
                         <div class="card-image">
-                            <img src="../static/images/pic.jpeg" alt="">
+                            <img src="../static/images/location_CampHill.jpg" alt="Nestled within Camp Hill, gravestones stand amidst serene 
+                            lawns, offering a peaceful retreat amidst bustling city life.">
+                        </div>
+
+                        <div class="card-description flex justify-center text-center p-1">
+                            Nestled within Camp Hill, gravestones stand amidst serene lawns, offering a peaceful retreat amidst bustling city life.
                         </div>
 
                         <div class="card-select flex">
                             <div class="input-radio flex justify-center">
-                                <input type="radio" name="burial methods" value="image1">
+                                <input type="radio" name="burial methods" value="Camp Hill">
                             </div>
 
                             <button type="button" class="flex justify-center items-center icon hover:bg-[#e9ab78] rounded">
@@ -59,12 +64,17 @@
 
                     <div class="card border-[2px] border-black flex flex-col rounded-lg">
 
-                        <div class="card-heading flex justify-center p-1">
-                            HEADING 
+                        <div class="card-heading flex justify-center text-center p-1">
+                            Fairview Lawn Cemetery 
                         </div>
 
                         <div class="card-image">
-                            <img src="../static/images/pic.jpeg" alt="">
+                            <img src="../static/images/location_FairviewLawn.jpg" alt="Fairview Lawn Cemetery, with its manicured 
+                            lawns it provides a serene final resting place.">
+                        </div>
+
+                        <div class="card-description flex justify-center text-center p-1">
+                            Fairview Lawn Cemetery, with its manicured lawns it provides a serene final resting place. 
                         </div>
 
                         <div class="card-select flex">
@@ -81,17 +91,21 @@
 
                     <div class="card border-[2px] border-black flex flex-col rounded-lg">
 
-                        <div class="card-heading flex justify-center p-1">
-                            HEADING 
+                        <div class="card-heading flex justify-center text-center p-1">
+                            Mount Hermon Cemetery
                         </div>
 
                         <div class="card-image">
-                            <img src="../static/images/pic.jpeg" alt="">
+                            <img src="../static/images/location_MtHermon.jpg" alt="Set against the backdrop of Mount Hermon, this cemetery 
+                            offers sweeping views of majestic peaks and verdant valleys.">
                         </div>
-
+                        
+                        <div class="card-description flex justify-center text-center p-1">
+                            Set against the backdrop of Mount Hermon, this cemetery offers sweeping views of majestic peaks and verdant valleys.
+                        </div>
                         <div class="card-select flex">
                             <div class="input-radio flex justify-center">
-                                <input type="radio" name="burial methods" value="image1">
+                                <input type="radio" name="burial methods" value="Mount Hermon">
                             </div>
 
                             <button type="button" class="icon hover:bg-[#e9ab78] rounded">
@@ -103,17 +117,22 @@
 
                     <div class="card border-[2px] border-black flex flex-col rounded-lg">
 
-                        <div class="card-heading flex justify-center p-1">
-                            HEADING 
+                        <div class="card-heading flex justify-center text-center p-1">
+                            St. Peter's Cemetery 
                         </div>
 
                         <div class="card-image">
-                            <img src="../static/images/pic.jpeg" alt="">
+                            <img src="../static/images/location_StPeters.jpg" alt=" St. Peter's Cemetery boasts a peaceful setting 
+                            with a tranquil space for remembrance and reflection.">
+                            
                         </div>
-
+                        
+                        <div class="card-description flex justify-center text-center p-1">
+                            St. Peter's Cemetery boasts a peaceful setting with a tranquil space for remembrance and reflection.
+                        </div>
                         <div class="card-select flex">
                             <div class="input-radio flex justify-center">
-                                <input type="radio" name="burial methods" value="image1">
+                                <input type="radio" name="burial methods" value="St Peter's">
                             </div>
 
                             <button type="button" class="icon hover:bg-[#e9ab78] rounded">
