final changes for marker-options

--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -25,63 +25,29 @@
 
             <!--
                 This HTML code contains details (text and images)
-                regarding burial-methods.
+                regarding marker options.
             -->
-            <div class="burial-methods">
-                
-                <div class="heading text-center mb-3">
-                    Burial Methods
+            <div class="marker-options">
+
+                <div class="heading text-center">
+                    MARKER OPTIONS
                 </div>
 
-                <div class="layout-burial-methods grid grid-cols-1 sm:grid-cols-1 md:grid-cols-1 gap- lg:grid-cols-2 gap-5 place-items-center">
+                <div class="layout-marker-options flex flex-wrap justify-evenly gap-5">
 
-                    <div class="card border-[2px] border-black flex flex-col rounded-lg">
-
-                        <div class="card-heading flex justify-center text-center p-1">
-                            Camp Hill Cemetery 
-                        </div>
+                    <div class="card border-[2px] border-black rounded-lg">
 
                         <div class="card-image">
-                            <img src="../static/images/location_CampHill.jpg" alt="Nestled within Camp Hill, gravestones stand amidst serene 
-                            lawns, offering a peaceful retreat amidst bustling city life.">
+                            <img src="../static/images/mo_woodencross.jpg"
+                                alt="This is a wooden cross used for memorial purposes.">
                         </div>
 
-                        <div class="card-description flex justify-center text-center p-1">
-                            Nestled within Camp Hill, gravestones stand amidst serene lawns, offering a peaceful retreat amidst bustling city life.
+                        <div class="card-text pt-2 pl-2">
+                            This is a wooden cross used for memorial purposes.
                         </div>
 
                         <div class="card-select flex">
-                            <div class="input-radio flex justify-center">
-                                <input type="radio" name="burial methods" value="Camp Hill">
-                            </div>
-
-                            <button type="button" class="flex justify-center items-center icon hover:bg-[#e9ab78] rounded">
-                                <i class="fa-solid fa-microphone text-3xl microphone"></i>
-                            </button>
-                        </div>
-
-                    </div>
-
-                    <div class="card border-[2px] border-black flex flex-col rounded-lg">
-
-                        <div class="card-heading flex justify-center text-center p-1">
-                            Fairview Lawn Cemetery 
-                        </div>
-
-                        <div class="card-image">
-                            <img src="../static/images/location_FairviewLawn.jpg" alt="Fairview Lawn Cemetery, with its manicured 
-                            lawns it provides a serene final resting place.">
-                        </div>
-
-                        <div class="card-description flex justify-center text-center p-1">
-                            Fairview Lawn Cemetery, with its manicured lawns it provides a serene final resting place. 
-                        </div>
-
-                        <div class="card-select flex">
-                            <div class="input-radio flex justify-center">
-                                <input type="radio" name="burial methods" value="image1">
-                            </div>
-
+                            <input type="radio" name="marker options" value="Wooden Cross">
                             <button type="button" class="icon hover:bg-[#e9ab78] rounded">
                                 <i class="fa-solid fa-microphone text-3xl microphone"></i>
                             </button>
@@ -89,25 +55,19 @@
 
                     </div>
 
-                    <div class="card border-[2px] border-black flex flex-col rounded-lg">
-
-                        <div class="card-heading flex justify-center text-center p-1">
-                            Mount Hermon Cemetery
-                        </div>
+                    <div class="card border-[2px] border-black rounded-lg">
 
                         <div class="card-image">
-                            <img src="../static/images/location_MtHermon.jpg" alt="Set against the backdrop of Mount Hermon, this cemetery 
-                            offers sweeping views of majestic peaks and verdant valleys.">
+                            <img src="../static/images/mo_stonemarker.jpeg"
+                                alt="This is engraved stone marker for natural burial.">
                         </div>
-                        
-                        <div class="card-description flex justify-center text-center p-1">
-                            Set against the backdrop of Mount Hermon, this cemetery offers sweeping views of majestic peaks and verdant valleys.
-                        </div>
-                        <div class="card-select flex">
-                            <div class="input-radio flex justify-center">
-                                <input type="radio" name="burial methods" value="Mount Hermon">
-                            </div>
 
+                        <div class="card-text pt-2 pl-2">
+                            This is engraved stone marker for natural burial.
+                        </div>
+
+                        <div class="card-select flex">
+                            <input type="radio" name="marker options" value="Stone Marker">
                             <button type="button" class="icon hover:bg-[#e9ab78] rounded">
                                 <i class="fa-solid fa-microphone text-3xl microphone"></i>
                             </button>
@@ -115,26 +75,39 @@
 
                     </div>
 
-                    <div class="card border-[2px] border-black flex flex-col rounded-lg">
-
-                        <div class="card-heading flex justify-center text-center p-1">
-                            St. Peter's Cemetery 
-                        </div>
+                    <div class="card border-[2px] border-black rounded-lg">
 
                         <div class="card-image">
-                            <img src="../static/images/location_StPeters.jpg" alt=" St. Peter's Cemetery boasts a peaceful setting 
-                            with a tranquil space for remembrance and reflection.">
-                            
+                            <img src="../static/images/mo_woodenplaque.jpeg"
+                                alt="This is a standing wooden plaque for natural burial.">
                         </div>
-                        
-                        <div class="card-description flex justify-center text-center p-1">
-                            St. Peter's Cemetery boasts a peaceful setting with a tranquil space for remembrance and reflection.
-                        </div>
-                        <div class="card-select flex">
-                            <div class="input-radio flex justify-center">
-                                <input type="radio" name="burial methods" value="St Peter's">
-                            </div>
 
+                        <div class="card-text pt-2 pl-2">
+                            This is a standing wooden plaque for natural burial.
+                        </div>
+
+                        <div class="card-select flex">
+                            <input type="radio" name="marker options" value="Wooden Plaque">
+                            <button type="button" class="icon hover:bg-[#e9ab78] rounded">
+                                <i class="fa-solid fa-microphone text-3xl microphone"></i>
+                            </button>
+                        </div>
+
+                    </div>
+
+                    <div class="card border-[2px] border-black rounded-lg">
+
+                        <div class="card-image">
+                            <img src="../static/images/mo_treemarker.jpeg"
+                                alt="This is a wooden board pinned at tree for identification.">
+                        </div>
+
+                        <div class="card-text pt-2 pl-2">
+                            This is a wooden board pinned at tree for identification.
+                        </div>
+
+                        <div class="card-select flex">
+                            <input type="radio" name="marker options" value="Tree Marker">
                             <button type="button" class="icon hover:bg-[#e9ab78] rounded">
                                 <i class="fa-solid fa-microphone text-3xl microphone"></i>
                             </button>
@@ -143,7 +116,6 @@
                     </div>
 
                 </div>
-
             </div>
 
         </form>
