added alt, image and value for the burial-options

--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -25,29 +25,53 @@
 
             <!--
                 This HTML code contains details (text and images)
-                regarding marker options.
+                regarding burial-methods.
             -->
-            <div class="marker-options">
+            <div class="burial-methods">
 
-                <div class="heading text-center">
-                    MARKER OPTIONS
+                <div class="heading text-center mb-3">
+                    Burial Methods
                 </div>
 
-                <div class="layout-marker-options flex flex-wrap justify-evenly gap-5">
+                <div class="layout-burial-methods grid grid-cols-2 gap-5 place-items-center">
 
-                    <div class="card border-[2px] border-black rounded-lg">
+                    <div class="card border-[2px] border-black flex flex-col rounded-lg">
 
-                        <div class="card-image">
-                            <img src="../static/images/mo_woodencross.jpg"
-                                alt="This is a wooden cross used for memorial purposes.">
+                        <div class="card-heading flex justify-center p-1">
+                            Casket
                         </div>
 
-                        <div class="card-text pt-2 pl-2">
-                            This is a wooden cross used for memorial purposes.
+                        <div class="card-image">
+                            <img src="../static/images/bm_casket.jpg" alt="This is a brown wooden casket">
                         </div>
 
                         <div class="card-select flex">
-                            <input type="radio" name="marker options" value="Wooden Cross">
+                            <div class="input-radio flex justify-center">
+                                <input type="radio" name="burial methods" value="Casket">
+                            </div>
+
+                            <button type="button" class="flex justify-center items-center icon hover:bg-[#e9ab78] rounded">
+                                <i class="fa-solid fa-microphone text-3xl microphone"></i>
+                            </button>
+                        </div>
+
+                    </div>
+
+                    <div class="card border-[2px] border-black flex flex-col rounded-lg">
+
+                        <div class="card-heading flex justify-center p-1">
+                            Eco-coffins
+                        </div>
+
+                        <div class="card-image">
+                            <img src="../static/images/bm_Ecoffins.webp" alt="This is an eco-friendly brown woven bamboo casket">
+                        </div>
+
+                        <div class="card-select flex">
+                            <div class="input-radio flex justify-center">
+                                <input type="radio" name="burial methods" value="Eco-coffins">
+                            </div>
+
                             <button type="button" class="icon hover:bg-[#e9ab78] rounded">
                                 <i class="fa-solid fa-microphone text-3xl microphone"></i>
                             </button>
@@ -55,19 +79,21 @@
 
                     </div>
 
-                    <div class="card border-[2px] border-black rounded-lg">
+                    <div class="card border-[2px] border-black flex flex-col rounded-lg">
 
-                        <div class="card-image">
-                            <img src="../static/images/mo_stonemarker.jpeg"
-                                alt="This is engraved stone marker for natural burial.">
+                        <div class="card-heading flex justify-center p-1">
+                            Shroud
                         </div>
 
-                        <div class="card-text pt-2 pl-2">
-                            This is engraved stone marker for natural burial.
+                        <div class="card-image">
+                            <img src="../static/images/bm_shroud.jpg" alt="This is a burial method where body is wrapped in clothes">
                         </div>
 
                         <div class="card-select flex">
-                            <input type="radio" name="marker options" value="Stone Marker">
+                            <div class="input-radio flex justify-center">
+                                <input type="radio" name="burial methods" value="Shroud">
+                            </div>
+
                             <button type="button" class="icon hover:bg-[#e9ab78] rounded">
                                 <i class="fa-solid fa-microphone text-3xl microphone"></i>
                             </button>
@@ -75,39 +101,21 @@
 
                     </div>
 
-                    <div class="card border-[2px] border-black rounded-lg">
+                    <div class="card border-[2px] border-black flex flex-col rounded-lg">
 
-                        <div class="card-image">
-                            <img src="../static/images/mo_woodenplaque.jpeg"
-                                alt="This is a standing wooden plaque for natural burial.">
+                        <div class="card-heading flex justify-center p-1">
+                            Tree pod
                         </div>
 
-                        <div class="card-text pt-2 pl-2">
-                            This is a standing wooden plaque for natural burial.
+                        <div class="card-image">
+                            <img src="../static/images/bm_treepod.jpg" alt="This is a bio-degradable pod with the remains buried to nurture trees">
                         </div>
 
                         <div class="card-select flex">
-                            <input type="radio" name="marker options" value="Wooden Plaque">
-                            <button type="button" class="icon hover:bg-[#e9ab78] rounded">
-                                <i class="fa-solid fa-microphone text-3xl microphone"></i>
-                            </button>
-                        </div>
+                            <div class="input-radio flex justify-center">
+                                <input type="radio" name="burial methods" value="Treepod">
+                            </div>
 
-                    </div>
-
-                    <div class="card border-[2px] border-black rounded-lg">
-
-                        <div class="card-image">
-                            <img src="../static/images/mo_treemarker.jpeg"
-                                alt="This is a wooden board pinned at tree for identification.">
-                        </div>
-
-                        <div class="card-text pt-2 pl-2">
-                            This is a wooden board pinned at tree for identification.
-                        </div>
-
-                        <div class="card-select flex">
-                            <input type="radio" name="marker options" value="Tree Marker">
                             <button type="button" class="icon hover:bg-[#e9ab78] rounded">
                                 <i class="fa-solid fa-microphone text-3xl microphone"></i>
                             </button>
@@ -116,6 +124,7 @@
                     </div>
 
                 </div>
+
             </div>
 
         </form>
