--- a/Natural Burial/static/css/index.css
+++ b/Natural Burial/static/css/index.css
@@ -1,51 +1,61 @@
-html {
+html{
     font-size: 16px;
 }
 
 
-/* CSS by Sadikshya Oli */
+/* CSS by Bhabin Chudal */
 
-.marker-options .heading {
+.burial-methods .heading{
     font-size: 4rem;
 }
 
-.marker-options .card {
-    width: 35rem;
-    height: 45rem;
+.burial-methods .card{
+    width: 37rem;
+    height: 47rem;
 }
 
-.marker-options .card {
-    .card-image {
-        height: 70%;
+/* Setting the height of each div inside card to achieve proper layout */
+.burial-methods .card{
+    .card-heading{
+        height: fit-content; /* Occupies the exact amount of height required to fit heading */
+        font-size: 3rem;
     }
 
-    .card-text {
-        height: 20%;
-        font-size: 2.5rem;
+    .card-image{
+        height: 60%; /* Occupies 60% of the height of the card */
+        flex-grow: 1; /* Occupy the remaining space if heading is short */
     }
 
-    .card-select {
-        height: 10%;
+    .card-select{
+        height: 20%; /* Occupies 20% of the height of the card */
+    }
+
+    .card-description{
+        font-size: 1.5rem;
     }
 }
 
-.marker-options .card .card-image img {
+.burial-methods .card .card-image img{
+    /* Making the image fit the card-image div */
     width: 100%;
     height: 100%;
 }
 
-.marker-options .card-select {
-    input[type="radio"] {
-        height: 100%;
+/* Increasing the size of the icon and radio buttons in card-select div */
+.burial-methods .card-select{
+    button{
         width: 50%;
     }
 
-    button {
-        width: 50%;
-        height: 100%;
+    i{
+        font-size: 100px;
+    }
+}
 
-        i {
-            font-size: 60px;
-        }
+.burial-methods .card-select .input-radio{
+    width: 50%;
+
+    input[type="radio"]{
+        width: 40%;
     }
 }
